# example-uvcookiecutter

./: CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md  modules.md
tests/: test_foo.py
